# Appunti-Real-Time-Embedded-Systems

./: .gitignore  1. Processes and Threads.md  2. Concurrency.md  3. Pthreads.md  4. Introduction to real-time scheduling.md  5. General Scheduling.md  6. Scheduling of periodic tasks.md  7. Resource access protocols.md  8. Handling hybrid task sets.md  README.md
datacenter/: CMakeLists.txt  README.md  dashboard.html  datacenter.sh  main.c  ros_web_bridge.py
datacenter/css/: style.css
datacenter/dht/: CMakeLists.txt
exercices/concurrency/2006-08-06/: makefile  out_cond.txt  out_sem.txt  pasticceria.c  pasticceria.md  pasticceria_cond.c  pasticceria_sem.c
exercices/concurrency/2006-14-12/: corsa.c  corsa.md  corsa_cond.c  corsa_mutex.c  corsa_sem.c  out_cond.txt  out_sem.txt
exercices/concurrency/2019-21-02/: mutex.c  out_cond.txt  out_sem.txt  riparazioni.md  riparazioni_cond.c  riparazioni_sem.c  sem.c
exercices/concurrency/2022-12-01/: bandiera.c  bandiera_cond.c  bandierine.md  out_cond.txt
exercices/concurrency/2022-13-07/: discoteca.md  discoteca_cond.c  main.c  main_cv.c  makefile  out_cond.txt
exercices/concurrency/2023-14-04/: palestra.md  palestra_cond.c
exercices/concurrency/2023-27-06/: out_cond.txt  porto.c  porto.md  porto_cond.c  porto_sem.c
exercices/concurrency/2024-19-04/: out_cond.txt  out_sem.txt  rotonda.md  rotonda_cond.c  rotonda_sem.c
exercices/concurrency/2025-01-07/: bagno.md
exercices/concurrency/2025-15-04/: passerella.md
exercices/scheduling/: scheduling.md
